Scenario3/TraditionalDevOps/ingress/nginx/ingress-sharding.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller-shard1
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: controller
        args:
        - /nginx-ingress-controller
        - --ingress-class=nginx-shard1
        - --watch-ingress-without-class=false
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx-controller-shard2
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: controller
        args:
        - /nginx-ingress-controller
        - --ingress-class=nginx-shard2
        - --watch-ingress-without-class=false
